--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,13 @@
-<p>not-found works!</p>
+<main class="d-flex justify-content-center align-items-start">
+<div class="d-flex flex-column justify-content-center align-items-center">
+<h1 class="p-2">Complimenti.</h1>
+
+<h2>Hai trovato la pagina 404!</h2>
+<img src="../../assets/meow.jpg" alt="Cat's eyes">
+
+<h3 class="p-3">Ora vattene.</h3>
+
+</div>
+
+
+</main>
