--- a/src/app/user-single/user-single.component.html
+++ b/src/app/user-single/user-single.component.html
@@ -1,4 +1,4 @@
-<main class="border border-secondary m-4 d-flex justify-content-between align-items-center p-1">
+<main class="border border-secondary m-4 d-flex justify-content-evenly align-items-center p-1">
 
       <img  [src]="user.profilePhotoUrl" alt="cats" />
     
@@ -7,6 +7,7 @@
       <p>{{ user.age }}</p>
       <p>{{ user.address.city }}</p>
     
-      <button (click)="clk.emit(user)" >Dettagli</button>
+      <button class="nfobtn" (click)="clk.emit(user)" >Dettagli</button>
+      <button class="dltbtn" (click)="dlt.emit(user)">X</button>
 
 </main>
