--- a/src/app/order-container/order-container.component.html
+++ b/src/app/order-container/order-container.component.html
@@ -1,1 +1,4 @@
-<p>order-container works!</p>
+<main class="d-flex flex-column justify-content-start align-items-center">
+    <h5 class="pb-5">order-container</h5>
+<app-order-list></app-order-list>
+</main>
