--- a/src/app/user-single/user-single.component.scss
+++ b/src/app/user-single/user-single.component.scss
@@ -6,10 +6,24 @@ main{
         width: 6rem;
         height: 6.5rem;
     }
-    button{
+    .nfobtn{
         background-color: rgb(68, 132, 230);
         font-weight: bolder;
         color: rgb(6, 6, 80);
     }
+    .dltbtn{
+        color: rgb(4, 24, 6);
+        background-color: rgb(156, 18, 5);
+        height: 2rem;
+        width: 2rem;
+        border-radius: 50%;
+        border: none;
+        font-weight: bolder;
+        &:hover{
+            background-color: rgb(248, 36, 36);
+            border: solid black 1px;
+        }      
+    }
+    
 
 }
