--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <main class="vw-100 d-flex flex-row-reverse">
     <button class="usrbtn" routerLink="/user">User</button>
     <button class="ordbtn" routerLink="/order">Order</button>
+    <button class="beerstuff" routerLink="/beers">Beers!</button>
 </main>
 
