--- a/src/app/brewery/brewery.component.html
+++ b/src/app/brewery/brewery.component.html
@@ -18,7 +18,8 @@
     <ng-container *ngIf="selectedB">
     <div class="card">
         <div class="card-body">
-         <p>ciao {{selectedB.name}}</p>
+         <p>{{selectedB.name}}</p>
+         <p>{{selectedB.price}} €</p>
         </div>
       </div>
 </ng-container>
