--- a/src/app/brewery/brewery.component.html
+++ b/src/app/brewery/brewery.component.html
@@ -13,17 +13,19 @@
 
     <button [disabled]="!chosenBname || !chosenBsize" (click)="showBeer()"  >Search</button>
 
-    
+    </form>
 
     <ng-container *ngIf="selectedB">
-    <div class="card">
+    
+        <div class="card mt-4">
         <div class="card-body">
          <p>{{selectedB.name}}</p>
          <p>{{selectedB.price}} €</p>
         </div>
       </div>
+
 </ng-container>
-</form>
+
 
 
 </main>
