--- a/src/app/brewery/brewery.component.scss
+++ b/src/app/brewery/brewery.component.scss
@@ -1,8 +1,13 @@
 main{
     height: 90vh;
-    background-color: cadetblue;
+    background-color: rgb(178, 180, 50);
     select{
         height: 5vh;
         width: 15vw;
+    }
+    .card{
+        width: 15vw;
+        border-radius: 15%;
+        font-weight: bold;
     }
 }
